--- a/.github/workflows/build-docker-hub.yml
+++ b/.github/workflows/build-docker-hub.yml
@@ -5,9 +5,8 @@ on:
     branches: [ main ]
     paths:
       - 'Dockerfile'
-      - 'index.js'
-      - 'package.json'
-      - 'index.html'
+      - 'init.sh'
+      - 'entrypoint.sh'
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -36,10 +35,4 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/nodejs:empty
-          labels: |
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}
-            org.opencontainers.image.description=HTTP Server
-            org.opencontainers.image.licenses=MIT
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            ${{ secrets.DOCKERHUB_USERNAME }}/vless:latest
